# forest_fires_forecasting

./: README.md  logging_utils.py  main.py  pyproject.toml  requirements.txt  utils.py
input/: statistics.xlsx
libs/: cls_utils.py  log_utils.py  utils.py
output/Khanty-Mansiysk/: forecast.xlsx  weather.xlsx
output/Lariak/: forecast.xlsx  weather.xlsx
output/Leushi/: forecast.xlsx  weather.xlsx
output/October/: forecast.xlsx  weather.xlsx
output/Ugut/: forecast.xlsx  weather.xlsx
